[package]
name = "scene_releasex_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "scene_releasex_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.35.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scene_release = { git = "https://github.com/hiddenpdx/scene-release", branch = "main" }